Viz (Chart  38): Added Vertical bar chart of Top 10 Stores by Sales. 💼

--- a/Rossmann_Retail_Sales_Prediction.ipynb
+++ b/Rossmann_Retail_Sales_Prediction.ipynb
@@ -10284,7 +10284,7 @@
         "id": "0C5CUVG9JrnW"
       },
       "source": [
-        "##### Chart 38 - Which store type makes customers spend more ?"
+        "##### Chart 38 - Top 10 Stores By Sales"
       ]
     },
     {
