Viz (Chart 39) - Bottom 10 Stores by Total Sales: Vertical bar chart showing lowest-performing stores (values in millions) 📉

--- a/Rossmann_Retail_Sales_Prediction.ipynb
+++ b/Rossmann_Retail_Sales_Prediction.ipynb
@@ -10573,7 +10573,7 @@
         "id": "kvbJattR7R65"
       },
       "source": [
-        "##### Chart 31 - Which store type makes customers spend more ?"
+        "##### Chart 39 - Top 10 Poorly Performing Stores"
       ]
     },
     {
@@ -10600,7 +10600,8 @@
         }
       ],
       "source": [
-        "# Chart - Bottom 10 Stores by Total Sales (vertical bar chart)\n",
+        "# Chart - 39 Vizualisation Code\n",
+        "\n",
         "# Features Used - Store, Sales\n",
         "\n",
         "# ✅ Why this chart is important to include?\n",
@@ -10668,6 +10669,23 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Summary -**\n",
+        "\n",
+        "* This chart highlights the bottom 10 stores in terms of total revenue.\n",
+        "\n",
+        "* Their total sales range roughly between 2.11M and 2.40M, which is significantly lower than average-performing stores.\n",
+        "\n",
+        "* These stores consistently underperform across the entire dataset, indicating potential operational, demographic, or competitive issues.\n",
+        "\n",
+        "* This helps me identify locations that may need urgent attention, such as marketing reinforcement, assortment changes, or better store management."
+      ],
+      "metadata": {
+        "id": "I1cRlpE7rQem"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "FuNSzRZY7R66"
       },
@@ -10680,7 +10698,13 @@
       "metadata": {
         "id": "LOvLGILy7R67"
       },
-      "source": []
+      "source": [
+        "* I chose a vertical bar chart because it gives a very clear picture of which stores are performing the worst in terms of total revenue.\n",
+        "\n",
+        "* Since store-level performance is extremely important in retail analytics, plotting each store ID on the x-axis and its aggregated sales on the y-axis helps me easily spot the weakest performers.\n",
+        "\n",
+        "* This also creates a direct comparison with the Top 10 stores chart, making it easier to highlight the gap between high- and low-performing outlets."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -10696,7 +10720,25 @@
       "metadata": {
         "id": "LD7wlIaG7R67"
       },
-      "source": []
+      "source": [
+        "* These 10 stores — including IDs 307, 543, 198, 208, 263, 841, 879, 254, 186, and 972 — have the lowest cumulative sales among all stores.\n",
+        "\n",
+        "* Their total sales range from 2.11M to 2.40M, which is noticeably lower compared to the overall store distribution.\n",
+        "\n",
+        "* The fact that the gap is relatively narrow suggests that these stores consistently perform poorly and never experience strong peak periods.\n",
+        "\n",
+        "* This may signal:\n",
+        "\n",
+        "    * Weak store location (low footfall area)\n",
+        "\n",
+        "    * High competitor presence nearby\n",
+        "\n",
+        "    * Ineffective assortment or store size\n",
+        "\n",
+        "    * Poor promotion execution\n",
+        "\n",
+        "    * Customer base limitations (e.g., rural/low-income area)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -10713,7 +10755,35 @@
       "metadata": {
         "id": "ctJn_f-x7R68"
       },
-      "source": []
+      "source": [
+        "**Positive business impact :**\n",
+        "\n",
+        "* Identifying the bottom stores allows me to target interventions instead of wasting effort on stores that are already performing well.\n",
+        "\n",
+        "* These stores are prime candidates for:\n",
+        "\n",
+        "    * Localized marketing or promotional campaigns\n",
+        "\n",
+        "    * Optimizing product assortment based on demand\n",
+        "\n",
+        "    * Re-evaluating store layout, staffing, or operations\n",
+        "\n",
+        "* Introducing promotional strategies that worked well for high-performing stores\n",
+        "\n",
+        "\n",
+        "* If I improve even a few of these low-performing stores, the aggregate business uplift can be significant because these stores currently contribute very little to total revenue.\n",
+        "\n",
+        "\n",
+        "**Negative-growth risk signals:**\n",
+        "\n",
+        "* If these stores are left unattended, they may drag down overall regional performance.\n",
+        "\n",
+        "* Chronic underperformance could signal deeper structural issues like poor store placement or low local demand.\n",
+        "\n",
+        "* Repeatedly low sales may cause inventory stagnation, increasing storage and operational costs.\n",
+        "\n",
+        "* If competitor stores are located closer or offer stronger promotions, these stores may continue losing footfall, creating a long-term negative trend."
+      ]
     },
     {
       "cell_type": "markdown",
